# Peregrine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  enter-container.sh  runtime.df
Figures/: Preliminary Graph.ai
Motion_Detection/: makefile  motionDetection  motionDetection.cpp  motionDetection.hpp
src/: config.conf  frame_io.cpp  peregrine.cpp  peregrine.graph  run
src/include/: common.hpp  frame_io.hpp  peregrine.hpp
